[tool.poetry]
name = "qiskit-textbook"
version = "0.1.0"
description = ""
authors = ["iharuya <i4haruya@gmail.com>"]
readme = "README.md"
packages = [{include = "qiskit_textbook"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
